Category-page:modified filters to accordion and to slide-toggle in mobile, added fake-title (for removing), removed sidebar-additional, added show-more button template

--- a/app/design/frontend/Project/Default/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Project/Default/Magento_Catalog/layout/catalog_category_view.xml
@@ -2,7 +2,17 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
+        <referenceBlock name="div.sidebar.additional" remove="true"/>
+
         <move element="category.view.container" destination="page.wrapper" after="header-nav"/>
         <move element="breadcrumbs" destination="main.content" before="-"/>
+
+        <referenceContainer name="main.content">
+            <block name="show-more-btn" template="Magento_Catalog::show-more-btn.phtml" after="category.products"/>
+        </referenceContainer>
+
+        <referenceContainer name="div.sidebar.main">
+            <block name="fake-title" template="Magento_Catalog::fake-title.phtml" before="-"/>
+        </referenceContainer>
     </body>
 </page>
