--- a/app/design/frontend/Project/Default/Magento_Catalog/templates/product/list/toolbar.phtml
+++ b/app/design/frontend/Project/Default/Magento_Catalog/templates/product/list/toolbar.phtml
@@ -16,7 +16,14 @@
 use Magento\Catalog\Model\Product\ProductList\Toolbar;
 ?>
 <?php if ($block->getCollection()->getSize()): ?>
+
     <div class="toolbar toolbar-products" data-mage-init='<?= /* @escapeNotVerified */ $block->getWidgetOptionsJson() ?>'>
+
         <?php include ($block->getTemplateFile('Magento_Catalog::product/list/toolbar/amount.phtml')) ?>
+
+        <?php if ($block->isExpanded()): ?>
+            <?php include ($block->getTemplateFile('Magento_Catalog::product/list/toolbar/sorter.phtml')) ?>
+        <?php endif; ?>
+
     </div>
 <?php endif ?>
