--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -91,8 +91,8 @@
       @_button-color: @pg-dark-color,
       @_button-background-hover: @pg-grey60-color,
       @_button-color-hover: @pg-dark-color,
-      @_button-border: @pg-border-light-bg,
-      @_button-border-hover: 1px solid @pg-grey60-color
+      @_button-border: 1px solid @pg-border-light-bg,
+      @_button-border-hover: 1px solid @pg-border-light-bg
     )
   }
 
@@ -105,7 +105,7 @@
       @_button-color: @pg-dark-color,
       @_button-background-hover: @pg-grey50-color,
       @_button-color-hover: @pg-dark-color,
-      @_button-border: @pg-grey30-color,
+      @_button-border: 1px solid @pg-grey30-color,
       @_button-border-hover: 1px solid @pg-grey30-color
     )
   }
@@ -119,7 +119,8 @@
       @_button-color: @pg-dark-color,
       @_button-background-hover: @pg-dark-color,
       @_button-color-hover: @pg-white-color,
-      @_button-border: @pg-dark-color
+      @_button-border: 1px solid @pg-dark-color,
+      @_button-border-hover: 1px solid @pg-dark-color
     )
   }
 
@@ -132,7 +133,8 @@
       @_button-color: @pg-white-color,
       @_button-background-hover: @pg-grey10-color,
       @_button-color-hover: @pg-white-color,
-      @_button-border: @pg-dark-color
+      @_button-border: 1px solid @pg-dark-color,
+      @_button-border-hover: 1px solid @pg-dark-color
     )
   }
 
