--- a/app/design/frontend/Project/Default/Magento_Theme/templates/product-slider-large.phtml
+++ b/app/design/frontend/Project/Default/Magento_Theme/templates/product-slider-large.phtml
@@ -6,7 +6,7 @@
 
 <script type="text/x-magento-init">
     {
-        ".products-upsell>.product-items": {
+        ".products-upsell>.product-items, .products-crossell>.product-items, .products-related>.product-items": {
             "js/slider": {
                 "loop":true,
                 "itemElement":"product-item",
