--- a/app/design/frontend/Project/Default/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/web/css/source/_extend.less
@@ -22,5 +22,6 @@
 @import './extend/_header.less';
 @import './extend/_breadcrumbs.less';
 @import './extend/_product-gallery.less';
+@import './extend/_recently-wieved-gallery.less';
 @import './extend/_footer.less';
 
