--- a/app/design/frontend/Project/Default/web/css/source/extend/_breadcrumbs.less
+++ b/app/design/frontend/Project/Default/web/css/source/extend/_breadcrumbs.less
@@ -20,7 +20,7 @@
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .breadcrumbs {
-        margin: 15px 0 25px 0;
+        margin: 15px auto 25px auto;
         padding-left: 0;
         padding-right: 0;
     }
@@ -32,7 +32,7 @@
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .breadcrumbs {
-        margin: 15px 0 25px 0;
+        margin: 15px auto 25px auto;
         padding-left: 0;
         padding-right: 0;
     }
