--- a/app/design/frontend/Project/Default/Magento_Catalog/templates/show-more-btn.phtml
+++ b/app/design/frontend/Project/Default/Magento_Catalog/templates/show-more-btn.phtml
@@ -6,6 +6,6 @@
 
 <div class="show-more-btn-box">
     <button class="btn-light-to-light">
-        Show more
+        <?php echo $block->escapeHtml(__('Show more')) ?>
     </button>
 </div>
