--- a/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/_extend.less
@@ -1,1 +1,4 @@
+@import './extend/_cart.less';
 @import './extend/_minicart.less';
+@import './extend/_page-layout-checkout';
+@import './extend/_progress-bar';
