--- a/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/extend/_minicart.less
+++ b/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/extend/_minicart.less
@@ -13,7 +13,7 @@
                 & > .primary {
                     margin: 0;
                     height: 100%;
-                    width: ~'calc(100% - 10px)';
+                    width: 100%;
                     .action.primary {
                         margin: 0;
                     }
@@ -33,6 +33,7 @@
         .block-content {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            grid-column-gap: 15px;
             & > .actions > .primary .action.primary {
                 font: 1.6rem/1.2 'Spacer', sans-serif;
                 border-radius: 0;
@@ -55,8 +56,7 @@
             .secondary {
                 display: flex;
                 height: 100%;
-                width: ~'calc(100% - 10px)';
-                padding: 10px;
+                width: 100%;
                 justify-content: center;
                 align-items: center;
                 box-sizing: border-box;
@@ -99,11 +99,12 @@
             display: flex;
             justify-content: space-between;
             width: 100%;
+            dl.product {
+                display: block;
+            }
         }
 
         .options.list {
-            display: grid;
-            grid-template-columns: 1fr 3fr;
             > * {
                 display: block;
                 margin: 0;
@@ -129,28 +130,38 @@
             display: grid;
             width: ~'calc(100% - 100px)';
             padding-left: 0;
-            padding-right: 10px;
             .price {
                 font-size: 1.8rem;
                 color: @pg-accent-color;
             }
+
             > * {
                 width: auto;
             }
+
             .content {
                 width: 100%;
             }
+
             .product-item-pricing {
                 order: 2;
+                grid-column: 1 / span 2;
             }
+
             .price-excluding-tax {
                 margin: 0;
+            }
+
+            .product.actions {
+                grid-column: 1 / span 2;
+                justify-content: flex-end;
             }
         }
 
         .product-item-name {
             order: 1;
             margin: 0;
+            grid-column: 1 / span 2;
             a {
                 color: @pg-dark-color;
                 text-decoration: underline;
@@ -174,13 +185,9 @@
         }
 
         .product.actions {
-            position: absolute;
-            bottom: 17px;
-            left: 0;
             .secondary {
                 border: none;
                 width: auto;
-                padding: 0;
             }
         }
     }
@@ -201,10 +208,10 @@
         .product > .product-item-photo {
             float: right;
         }
-    }
 
-    .product-image-wrapper {
-        border-bottom: 1px solid @pg-grey40-color;
+        .product-image-wrapper {
+            border-bottom: 1px solid @pg-grey40-color;
+        }
     }
 }
 
