forgot-password page

--- a/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/extend/_page-layout-checkout.less
+++ b/app/design/frontend/Project/Default/Magento_Checkout/web/css/source/extend/_page-layout-checkout.less
@@ -138,6 +138,13 @@
       top: 0;
       left: 0;
     }
+
+    .hidden-fields {
+      padding-top: 10px;
+      .actions-toolbar {
+        margin-top: 50px;
+      }
+    }
   }
 }
 
