added account pages styles, code refractoring

--- a/app/design/frontend/Project/Default/Magento_Customer/web/css/source/_extend.less
+++ b/app/design/frontend/Project/Default/Magento_Customer/web/css/source/_extend.less
@@ -1,2 +1,5 @@
 @import 'extend/_my-account-page.less';
 @import 'extend/_forgot-password-page.less';
+@import 'extend/_customer-account-login.less';
+@import 'extend/_create-account.less';
+@import 'extend/_customer-account-index.less';
