--- a/app/design/frontend/Project/Default/web/css/source/_global.less
+++ b/app/design/frontend/Project/Default/web/css/source/_global.less
@@ -144,23 +144,20 @@
     }
   }
 
-  .custom-checkbox {
-    input[type="checkbox"] {
-      display: none;
-    }
+  input[type="checkbox"] {
+    display: none;
+  }
 
-    input[type="checkbox"] + label {
-      position: relative;
-      display: inline-block;
-      padding: 0 32px 0 0;
-      cursor: pointer;
-    }
-
-    input[type="checkbox"] + label:before {
+  input[type="checkbox"] + label {
+    position: relative;
+    display: inline-block;
+    padding: 0 32px 0 0;
+    cursor: pointer;
+    &:before {
       content: '';
       position: absolute;
       top: -2px;
-      right: 0;
+      left: -20px;
       border: 1px solid @pg-grey30-color;
     }
   }
@@ -171,6 +168,102 @@
 
   .block-wishlist .block-title > strong {
     font-weight: bold;
+  }
+
+  a.primary.primary,
+  button.primary.primary {
+    padding: 12px 15px;
+    font-size: 1.8rem;
+    line-height: 1.2;
+    border-radius: 0;
+    background-color: @pg-accent-color;
+    border-color: @pg-accent-color;
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: @pg-dark-color;
+      border-color: @pg-dark-color;
+    }
+  }
+
+  .actions-toolbar {
+    .secondary.secondary {
+      float: left;
+      margin: 20px 0;
+      padding-left: 10px;
+      text-align: left;
+      &:after {
+        content: '';
+        display: inline-block;
+        height: 10px;
+        width: 10px;
+        border-bottom: 1px solid @pg-dark-color;
+        border-left: 1px solid @pg-dark-color;
+        transform: rotate(45deg);
+      }
+
+      a {
+        color: @pg-dark-color;
+      }
+    }
+
+    .primary.primary,
+    .secondary.secondary {
+      display: block;
+      float: none;
+      > * {
+        width: 100%;
+      }
+    }
+
+    .primary {
+      .action.action {
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
+
+  .form {
+    .fieldset {
+      > .field {
+        position: relative;
+
+        > .control.control {
+          width: 100%;
+        }
+
+        .label {
+          position: absolute;
+          left: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+          padding: 0;
+          width: auto;
+        }
+
+        input[type="checkbox"] + .label {
+          left: 20px;
+        }
+      }
+
+      > .field:not(.choice) {
+        .label {
+          padding: 0;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  .column:not(.sidebar-main) form .actions-toolbar.actions-toolbar,
+  .column:not(.sidebar-additional) form .actions-toolbar.actions-toolbar {
+    margin-left: 0;
+  }
+
+  div.mage-error[generated] {
+    position: absolute;
+    margin-top: 2px;
   }
 }
 
@@ -209,10 +302,8 @@
     height: 18px;
   }
 
-  .custom-checkbox {
-    input[type="checkbox"]:checked + label:before {
-      .sprite(@check-large-icon);
-    }
+  input[type="checkbox"]:checked + label:before {
+    .sprite(@check-large-icon);
   }
 
   .page-title-wrapper {
@@ -263,10 +354,8 @@
     height: 13px;
   }
 
-  .custom-checkbox {
-    input[type="checkbox"]:checked + label:before {
-      .sprite(@check-dark-icon);
-    }
+  input[type="checkbox"]:checked + label:before {
+    .sprite(@check-dark-icon);
   }
 
   h1,
